@@ -122,7 +122,6 @@
         </excludes>
           <source>22</source>
           <target>22</target>
-          <compilerArgs>--enable-preview</compilerArgs>
       </configuration>
     </plugin>
 
